# t-ab-financial-reporting

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: run.py
app/api/: main.py
app/api/routes/: report.py  utils.py
app/core/: app_factory.py  config.py  dependencies.py  enums.py  gunicorn_conf.py  logs.py
app/db/: models.py  seed.py  session.py  transaction_manager.py  uow.py
app/migrations/: env.py
app/migrations/versions/: 4b562524fbff_add_external_id_to_users.py  5602b15cb980_init_models.py  c857812dcc61_add_indexes_to_transactions.py
app/repositories/: base.py  report_repo.py  transaction_repo.py  user_repo.py
app/schemas/: report.py
app/services/: report_service.py
tests/: conftest.py
tests/api/: test_report_routes.py  test_utils_routes.py
tests/models/: test_models.py
tests/repositories/: test_transaction.py  test_user.py
tests/services/: test_report_service.py
