[project]
name = "t-ab-financial-reporting"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "gunicorn>=25.1.0",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
    "uvicorn-worker>=0.4.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.15.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
omit = [
    "*/.venv/*",
    "*/tests/*",
]
