[project]
name = "t-ab-financial-reporting"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "faker>=40.11.0",
    "fastapi>=0.135.1",
    "gunicorn>=25.1.0",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "uvicorn-worker>=0.4.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.15.6",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]

[tool.coverage.run]
omit = [
    "*/.venv/*",
    "*/tests/*",
]

[tool.ruff]
src = ["app"]
line-length = 120
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", # pycodestyle – ошибки стиля
    "W", # pycodestyle – ошибки стиля
    "F", # pyflakes – ошибки синтаксиса
    "B", # flake8-bugbear – потенциальные баги
    "SIM", # flake8-simplify – упрощение кода
    "UP", # pyupgrade – современный синтаксис
    "I", # isort – сортировка импортов
    "S",
    "ANN",
    "ASYNC",
    "FAST",
    "COM",
]

ignore = [
    'B008', #  function-call-in-default-argument
    'ANN401',
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
